# busyboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arcade_buttons.cpp  arcade_buttons.h  arcade_sounds.h  busyboard.cpp  color.cpp  color.h  configure.sh  debounce.cpp  debounce.h  dfPlayerDriver.h  dotmatrix.cpp  dotmatrix.h  download-retro-sounds.py  download_sounds.sh  fan_leds.cpp  fan_leds.h  format.sh  gamma8.cpp  gamma8.h  install-inkscape-extension.sh  listen.sh  make.sh  modes.h  phone.cpp  phone.h  sound_game.cpp  sound_game.h  upload.sh  vid2805.cpp  vid2805.h
analog_dial/: CMakeLists.txt  analog_dial.c  analog_dial.cpp  dfPlayerDriver.h
arcade_rgb_button/: CMakeLists.txt  arcade_rgb_button.cpp
hardware/: analog_8bit.py  make_frontpanel.sh  phone_dial.py
neopixel_tests/: PicoLedExample.cpp
parts/: CMakeLists.txt
parts/analog_dial/: CMakeLists.txt  analog_dial.cpp
parts/arcade_rgb_button/: CMakeLists.txt  arcade_rgb_button.cpp  bounce.csv  bounce.py
parts/neopixel_tests/: CMakeLists.txt  PicoLedExample.cpp
parts/seven_segment_display/: CMakeLists.txt  seven_segment_display.cpp
parts/vid28-05/: CMakeLists.txt  microstep.py  motor_vid28.cpp
sounds/: download.sh
vid28-05/: CMakeLists.txt  motor_vid28.cpp
