add_executable(motor_vid28 motor_vid28.cpp ${PROJECT_SOURCE_DIR}/vid2805.h ${PROJECT_SOURCE_DIR}/vid2805.cpp)
target_include_directories(motor_vid28 PRIVATE ${PROJECT_SOURCE_DIR})
target_link_libraries(motor_vid28 pico_stdlib hardware_pwm)
pico_enable_stdio_usb(motor_vid28 0)
pico_enable_stdio_uart(motor_vid28 1)
